<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_background"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        tools:layout_editor_absoluteX="1dp">

        <ImageView
            android:id="@+id/logoID"
            android:layout_width="174dp"
            android:layout_height="0dp"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/view5"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_project_logo" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_goneMarginLeft="200dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/mailImage"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/logoID" />

        <EditText
            android:id="@+id/emailEditTextID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/email_gmail_com"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorTint"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/mailImage"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toEndOf="@+id/mailImage"
            app:layout_constraintTop_toTopOf="@+id/mailImage" />

        <View
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/lockImage"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/mailImage" />

        <ImageView
            android:id="@+id/mailImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/view4"
            app:layout_constraintEnd_toStartOf="@+id/emailEditTextID"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:srcCompat="@drawable/ic_email" />

        <ImageView
            android:id="@+id/lockImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/view6"
            app:layout_constraintEnd_toStartOf="@+id/passEditTextID"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:srcCompat="@drawable/ic_lock" />

        <EditText
            android:id="@+id/passEditTextID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:autofillHints=""
            android:background="@null"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorTint"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/lockImage"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toEndOf="@+id/lockImage"
            app:layout_constraintTop_toTopOf="@+id/lockImage"
            app:layout_constraintVertical_bias="0.0" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/phnImage"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/lockImage" />

        <Button
            android:id="@+id/regButtonID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="128dp"
            android:background="@drawable/box_shape"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/view7" />

        <EditText
            android:id="@+id/phoneEditTextID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/phone_no"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorTint"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/phnImage"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toEndOf="@+id/phnImage"
            app:layout_constraintTop_toTopOf="@+id/phnImage" />

        <ImageView
            android:id="@+id/phnImage"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/view7"
            app:layout_constraintEnd_toStartOf="@+id/phoneEditTextID"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/view6"
            app:srcCompat="@drawable/ic_phone" />

        <View
            android:id="@+id/view7"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="32dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/regButtonID"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/phnImage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>